# egeria-python

./: .gitignore  .output.txt  =0.1  =1.1.3  =1.2.1  AGENTS.md  BACKLOG.md  CLAUDE.md  CONTRIBUTING.md  INSTRUCTIONS.md  MANIFEST.in  PYEGERIA_ISSUES.md  README.md  RELEASING.md  SETUP_LINUX_CREDENTIALS.md  __init__.py  analyze_json.py  apis.csv  brewtest.txt  callie.json  check_platform.py  config.json  debug_connection_maker.py  do_patch.py  env  fix_shadowing_v2.py  migrate_dr_egeria.py  parameter_cleanup_plan.md  pyproject.toml  pyproject_orig.toml  query_terms.py  refactor_find_methods.py  repro_typedef_v2.py  requirements.txt  setup.py  split_commands.py  test_cli.py  test_detach.py  test_direct.py  test_entity_defs.py  (+15 more)
.ai-sandbox/: REFACTORING_GUIDE.md  analyze_gov_attrs.py  analyze_json.py  refactor_all_find_methods.py  refactor_find_methods.py  repro_output.txt  split_commands.py  test_camel.py  test_filter_alias.py  test_pydantic.py  verify_nesting.py
.junie/: guidelines.md
commands/: README.md  __init__.py  generate_question_spec_markdown.py  migrate_question_specs.py
config/: README.md  config.json  config_workspaces.json  dw-format-sets.json  env  report_specs.json
docs/: beeai-agent-walkthrough.md  circular-dependency-fix-walkthrough.md  connection-maker-walkthrough.md  csv-transform-walkthrough.md  dr-egeria-v2-robustness-walkthrough.md  dr-egeria-validation-dependencies-walkthrough.md  dr_egeria_design_v2.md  dr_egeria_manual.md  egeria-expert-deployment-walkthrough.md  egeria-utility-modernization-walkthrough.md  (+11 more)
my_egeria/: EGERIA_WORKSPACES_INTEGRATION.md  HANDOFF_egeria_workspaces_my_egeria.md  README.md  pyproject.toml
my_egeria/my_egeria/: .pre-commit-config.yaml  __init__.py  config.py  error_popup_app.py  main.py  my_egeria.py  serve.py  set_variables.zsh  startup_check.py
my_egeria/my_egeria/DemoCode/Data_Products_Demo/: __init__.py  data_products.py  data_products.tcss  demo_service.py  member_details_screen.py  splash_screen.py
my_egeria/my_egeria/DemoCode/Deprecated/: ShopForDataScreenOld.py  my_connectors.py  my_profile_tui.py  report_spec.py  report_spec_details.py  report_spec_splash_screen.py  report_specs.tcss  report_specs_splash.tcss  tech_type.tcss  tech_type_details.py  tech_type_splash.tcss
my_egeria/my_egeria/DemoCode/Experimental Code/: Copying_DataTables_between_screens.example.py  Examople_Initiate_GAP.java  Exmaple_of_returning_data_in_a_product.java  __init__.py  experiment1.py  experiment1.tcss  experiment2-tree-rotated.py  experiment2-tree.py  experiment2.py  experiment3.py  subscribe_sample_body.py  tech_type_details_sample_body.py
my_egeria/my_egeria/DemoCode/Experimental Code/md_processing/: TabluarDataReport_Sample.json
my_egeria/my_egeria/DemoCode/Experimental Code/md_processing/dr-egeria-outbox/Collections/: Collections-2025-11-19-06-57-10-FORM.md  Collections-2025-11-19-07-08-47-FORM.md
my_egeria/my_egeria/DemoCode/Experimental Code/md_processing/dr-egeria-outbox/Digital-Products-MyE/: Digital-Products-MyE-2025-11-17-09-31-01-FORM.md  Digital-Products-MyE-2025-11-17-09-53-44-FORM.md
my_egeria/my_egeria/DemoCode/My_Profile/: CreateProfileScreen.py  CreateSubscriptionRequestScreen.py  EditCommunitiesScreen.py  EditIdentitiesScreen.py  EditProfileScreen.py  EditRolesScreen.py  EditTeamsScreen.py  MainScreen.py  MyTeam.py  SearchForTermScreen.py  SelectionOverviewScreen.py  ShopForDataScreen.py  ShopForDataScreenOld.py  StatusScreen.py  TechnologyTypeOptionsScreen.py  TechnologyTypeProcessesScreen.py  TechnologyTypeTemplatesScreen.py  TechnologyTypesScreen.py  Temp Data Display  UserIdentitiesScreen.py  __init__.py  catalog_api_calls.md  my_profile.tcss  my_profile_app.py  testing.yaml
my_egeria/my_egeria/DemoCode/Report_Specs_Demo/: my_reports.py  my_reports.tcss
my_egeria/my_egeria/DemoCode/Report_Specs_Demo/md_processing/dr-egeria-outbox/Digital-Products-MyE/: Digital-Products-MyE-2025-11-28-09-41-41-FORM.md
my_egeria/my_egeria/DemoCode/Technology_Type_Demo/: my_connectors.py  my_connectors.tcss  my_connectors_splash_screen.py
my_egeria/my_egeria/con_services/: egeria_connection.py  glossary_service.py  platform_service.py
my_egeria/my_egeria/screens/: __init__.py  about_screen.py  base_screen.py  cohorts_screen.py  connection_screen.py  error_popup_screen.py  governance_screen.py  help_screen.py  home_screen.py  login_screen.py  main_menu.py  project_screen.py  splash_screen.py  subject_area_screen.py
my_egeria/my_egeria/screens/GovernanceOfficer/: __init__.py  add_governance_definition.py  delete_governance_definition.py  governance_officer_browser.py  marketplace_tree.py
my_egeria/my_egeria/screens/ProductManager/: __init__.py  product_manager_browser.py
my_egeria/my_egeria/screens/ProjectManager/: ProjectManagerBrowser.py  __init__.py
my_egeria/my_egeria/screens/collections/: __init__.py  add_collection.py  collection_browser.py  collection_details.py  collection_members_screen.py  delete_collection.py
my_egeria/my_egeria/screens/glossary/: __init__.py  glossary_browser.py  glossary_browser_old.py  glossary_list_screen.py  term_details.py  term_list_screen.py
my_egeria/my_egeria/screens/platform/: __init__.py  platform_services.py  platforms_screen.py
my_egeria/my_egeria/services/: __init__.py  base_service.py  collection_service.py  egeria_connection.py  glossary_service.py  governance_officer_service.py  platform_service.py  product_manager_service.py  project_manager_service.py  subject_area_service.py  term_service.py
my_egeria/my_egeria/styles/: __init__.py  add_collection.css  add_governance_definition.css  glossary_screen.css  governance_officer_browser.css  login_screen.css  quit_screen.css  splash.css
my_egeria/my_egeria/tests/: __init__.py  conftest.py  test_glossary_service.py  test_login_screen.py  test_main_menu.py  test_results  test_startup_check.py  test_term_details_screen.py
my_egeria/my_egeria/utils/: __init__.py  config.py  egeria_client.py  tui_utils.py
my_egeria/my_egeria/widgets/: __init__.py  back_button.py  editable_table.py  ok_popup.py  popup.py
(+2655 files in other folders)
