[tool.poetry]
name = "pyegeria"
version = "1.5.1.0.13"
license = 'Apache 2.0'
authors = ["Dan Wolfson <dan.wolfson@pdr-associates.com>"]
readme = "README.md"
description = "A python client for Egeria"
keywords = ["egeria", "metadata", "governance"]
homepage = "https://github.com/odpi/egeria-python"

repository = "https://github.com/odpi/egeria-python"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
 ]
packages = [
    { include = "pyegeria"},
    { include = "commands/cat" },
    { include = "commands/tech" },
    { include = "commands/my"},
    { include = "commands/ops"},
    { include = "commands/cli"}
    ]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.0"
rich = "^13.8.1"
validators = "^0.32.0"
urllib3 = "^2.2.2"
requests = "^2.32.3"
confluent-kafka = "^2.5.0"
pytest = "^8.2.2"
jupyter = "^1.0.0"
click = "^8.1.7"
trogon = "^0.5.0"
textual-forms = "^0.3.0"
textual = "^0.75.1"
mermaid-py = "^0.5.3"
psycopg2-binary = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"


[tool.poetry.scripts]
    list_assets = "commands.cat.list_assets:main"
    list_tech_types = "commands.cat.list_tech_types:main"
    get_asset_graph = "commands.cat.get_asset_graph:main"
    get_collection = "commands.cat.get_collection:main"
    list_glossary = "commands.cat.list_glossary:main"
    get_tech_type_elements = "commands.cat.get_tech_type_elements:main"
    get_tech_type_template = "commands.cat.get_tech_type_template:main"
    list_projects = "commands.cat.list_projects:main"
    list_todos = "commands.cat.list_todos:main"
    list_cert_types = "commands.cat.list_cert_types:main"
    get_project_structure = "commands.cat.get_project_structure:main"
    get_project_dependencies = "commands.cat.get_project_dependencies:main"
    list_relationships = "commands.cat.list_relationships:main"
    list_user_ids = "commands.cat.list_user_ids:main"
    list_archives = "commands.cat.list_archives:main"
    list_deployed_catalogs = "commands.cat.list_deployed_catalogs:main"
    list_deployed_schemas = "commands.cat.list_deployed_database_schemas:main"
    create_glossary = "commands.cat.glossary_actions:create_glossary"
    delete_glossary = "commands.cat.glossary_actions:delete_glossary"
    create_term = "commands.cat.glossary_actions:create_term"

    monitor_asset_events = "commands.ops.monitor_asset_events:main"
    monitor_coco_status = "commands.ops.monitor_coco_status:main"
    monitor_engine_activity = "commands.ops.monitor_engine_activity:main_live"
    list_engine_activity = "commands.ops.monitor_engine_activity:main_paging "
    list_engine_activity_compressed = "commands.ops.monitor_engine_activity_c:main_paging "
    monitor_engine_activity_compressed = "commands.ops.monitor_engine_activity_c:main_live"

    monitor_gov_eng_status = "commands.ops.monitor_gov_eng_status:main_live"
    list_gov_eng_status = "commands.ops.monitor_gov_eng_status:main_paging"
    monitor_integ_daemon_status = "commands.ops.monitor_integ_daemon_status:main_live"
    list_integ_daemon_status = "commands.ops.monitor_integ_daemon_status:main_paging"
    monitor_platform_status = "commands.ops.monitor_platform_status:main"
    monitor_server_list = "commands.ops.orig_monitor_server_list:main"
    monitor_server_startup = "commands.ops.monitor_server_startup:main"
    monitor_server_status = "commands.ops.monitor_server_status:main"
    refresh_integration_daemon = "commands.ops.refresh_integration_daemon:main"
    restart_integration_daemon = "commands.ops.restart_integration_daemon:main"
    load_archive = "commands.ops.load_archive:load_archive"
    load_archive_tui = "commands.ops.load_archive:tui"
    list_catalog_targets = "commands.ops.list_catalog_targets:main"
    start_daemon = "commands.ops.engine_actions:start_daemon"
    stop_daemon = "commands.ops.engine_actions:stop_daemon"

    list_my_profile = "commands.my.list_my_profile:main"
    monitor_open_todos = "commands.my.monitor_open_todos:main"
    monitor_my_todos = "commands.my.monitor_my_todos:main"
    create_todo = "commands.my.todo_actions:create_todo"
    delete_todo = "commands.my.todo_actions:delete_todo"
    change_todo_status = "commands.my.todo_actions:change_todo_status"
    mark_todo_complete = "commands.my.todo_actions:mark_todo_complete"
    reassign_todo = "commands.my.todo_actions:reassign_todo"


    hey_egeria_ops = "commands.cli.egeria_ops:cli"
    hey_egeria_cat = "commands.cli.egeria_cat:cli"
    hey_egeria_tech = "commands.cli.egeria_tech:cli"
    hey_egeria_my = "commands.cli.egeria_my:cli"
    hey_egeria = "commands.cli.egeria:cli"

    get_guid_info = "commands.tech.get_guid_info:main"
    get_tech_details = "commands.tech.get_tech_details:main"
    list_asset_types = "commands.tech.list_asset_types:main"
    list_registered_services = "commands.tech.list_registered_services:main"
    list_relationship_types = "commands.tech.list_relationship_types:main"
    list_tech_templates = "commands.tech.list_tech_templates:main"
    get_element_info = "commands.tech.get_element_info:main"
    list_elements = "commands.tech.list_elements:main"
    list_related_specification = "commands.tech.list_related_specification:main"
    list_elements_for_classification = "commands.tech.list_elements_for_classification:main"
    list_related_elements = "commands.tech.list_related_elements:main"

    list_valid_metadata_values = "commands.tech.list_valid_metadata_values:main"
    list_element_graph = "commands.tech.get_element_graph:main"
    list_gov_action_processes = "commands.tech.list_gov_action_processes:main"