[tool.poetry]
name = "pyegeria"
version = "5.3.3.7"

license = 'Apache 2.0'
authors = ["Dan Wolfson <dan.wolfson@pdr-associates.com>"]
readme = "README.md"
description = "A python client for Egeria"
keywords = ["egeria", "metadata", "governance"]
homepage = "https://github.com/odpi/egeria-python"

repository = "https://github.com/odpi/egeria-python"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
 ]
packages = [
    { include = "pyegeria"},
    { include = "pyegeria/commands/cat" },
    { include = "pyegeria/commands/tech" },
    { include = "pyegeria/commands/my"},
    { include = "pyegeria/commands/ops"},
    { include = "pyegeria/commands/cli"}
    ]

[tool.poetry.dependencies]
#python = "^3.11" # 3.12 seemed to fail
python = "^3.12.3"
#python = "^3.13" Need to upgrade jupyter image
httpx = "*"
rich = "*"
validators = "*"
urllib3 = "*"
requests = "*"
confluent-kafka = "*"
pytest = "^8.2.2"
jupyter = "*"
click = "*"
trogon = "^0.6.0"
textual = "*"
mermaid-py = "*"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"


[tool.poetry.scripts]
    list_assets = "pyegeria.commands.cat.list_assets:main"
    list_tech_types = "pyegeria.commands.cat.list_tech_types:main"
    get_asset_graph = "pyegeria.commands.cat.get_asset_graph:main"
    get_collection = "pyegeria.commands.cat.get_collection:main"
    list_terms = "pyegeria.commands.cat.list_terms:main"
    get_tech_type_elements = "pyegeria.commands.cat.get_tech_type_elements:main"
    list_tech_type_elements = "pyegeria.commands.cat.list_tech_type_elements:main"
    list_projects = "pyegeria.commands.cat.list_projects:main"
    list_todos = "pyegeria.commands.cat.list_todos:main"
    list_cert_types = "pyegeria.commands.cat.list_cert_types:main"
    get_project_structure = "pyegeria.commands.cat.get_project_structure:main"
    get_project_dependencies = "pyegeria.commands.cat.get_project_dependencies:main"
    list_user_ids = "pyegeria.commands.cat.list_user_ids:main"
    list_deployed_catalogs = "pyegeria.commands.cat.list_deployed_catalogs:main"
    list_deployed_databases = "pyegeria.commands.cat.list_deployed_databases:main"
    list_deployed_schemas = "pyegeria.commands.cat.list_deployed_database_schemas:main"
    create_glossary = "pyegeria.commands.cat.glossary_actions:create_glossary"
    delete_glossary = "pyegeria.commands.cat.glossary_actions:delete_glossary"
    create_term = "pyegeria.commands.cat.glossary_actions:create_term"
    delete_term = "pyegeria.commands.cat.glossary_actions:delete_term"
    list_glossaries = "pyegeria.commands.cat.list_glossaries:main"
    load_terms_from_file = "pyegeria.commands.cat.glossary_actions:load_terms"
    export_terms_to_file = "pyegeria.commands.cat.glossary_actions:export_terms"
    list_deployed_servers = "pyegeria.commands.cat.list_servers_deployed_imp.py:main"
    list_collections = "pyegeria.commands.cat.list_collections:main"

    monitor_asset_events = "pyegeria.commands.ops.monitor_asset_events:main"
    monitor_coco_status = "pyegeria.commands.ops.monitor_coco_status:main"
    monitor_engine_activity = "pyegeria.commands.ops.monitor_engine_activity:main_live"
    list_engine_activity = "pyegeria.commands.ops.monitor_engine_activity:main_paging "
    list_engine_activity_compressed = "pyegeria.commands.ops.monitor_engine_activity_c:main_paging "
    monitor_engine_activity_compressed = "pyegeria.commands.ops.monitor_engine_activity_c:main_live"
    refresh_gov_eng_config = "pyegeria.commands.ops.gov_server_actions:refresh_gov_eng_config"
    monitor_gov_eng_status = "pyegeria.commands.ops.monitor_gov_eng_status:main_live"
    list_gov_eng_status = "pyegeria.commands.ops.monitor_gov_eng_status:main_paging"
    monitor_integ_daemon_status = "pyegeria.commands.ops.monitor_integ_daemon_status:main_live"
    list_integ_daemon_status = "pyegeria.commands.ops.monitor_integ_daemon_status:main_paging"
    monitor_platform_status = "pyegeria.commands.ops.monitor_platform_status:main"
    monitor_server_list = "pyegeria.commands.ops.orig_monitor_server_list:main"
    monitor_server_startup = "pyegeria.commands.ops.monitor_server_startup:main"
    monitor_server_status = "pyegeria.commands.ops.monitor_server_status:main"
    refresh_integration_daemon = "pyegeria.commands.ops.refresh_integration_daemon:main"
    restart_integration_daemon = "pyegeria.commands.ops.restart_integration_daemon:main"
    load_archive = "pyegeria.commands.ops.load_archive:load_archive"
    load_archive_tui = "pyegeria.commands.ops.load_archive:tui"
    list_catalog_targets = "pyegeria.commands.ops.list_catalog_targets:main"
    start_daemon = "pyegeria.commands.ops.engine_actions:start_daemon"
    stop_daemon = "pyegeria.commands.ops.engine_actions:stop_daemon"
    list_archives = "pyegeria.commands.ops.list_archives:main"

    list_my_profile = "pyegeria.commands.my.list_my_profile:main"
    list_my_roles = "pyegeria.commands.my.list_my_roles:main"
    monitor_open_todos = "pyegeria.commands.my.monitor_open_todos:main"
    monitor_my_todos = "pyegeria.commands.my.monitor_my_todos:main"
    create_todo = "pyegeria.commands.my.todo_actions:create_todo"
    delete_todo = "pyegeria.commands.my.todo_actions:delete_todo"
    change_todo_status = "pyegeria.commands.my.todo_actions:change_todo_status"
    mark_todo_complete = "pyegeria.commands.my.todo_actions:mark_todo_complete"
    reassign_todo = "pyegeria.commands.my.todo_actions:reassign_todo"


    hey_egeria_ops = "pyegeria.commands.cli.egeria_ops:cli"
    hey_egeria_cat = "pyegeria.commands.cli.egeria_cat:cli"
    hey_egeria_tech = "pyegeria.commands.cli.egeria_tech:cli"
    hey_egeria_my = "pyegeria.commands.cli.egeria_my:cli"
    hey_egeria = "pyegeria.commands.cli.egeria:cli"
    egeria_login = "pyegeria.commands.cli.egeria_login_tui:login"

    get_guid_info = "pyegeria.commands.tech.get_guid_info:main"
    get_tech_details = "pyegeria.commands.tech.get_tech_details:main"
    list_asset_types = "pyegeria.commands.tech.list_asset_types:main"
    list_registered_services = "pyegeria.commands.tech.list_registered_services:main"
    list_relationship_types = "pyegeria.commands.tech.list_relationship_types:main"
    list_tech_templates = "pyegeria.commands.tech.list_tech_templates:main"
    get_element_info = "pyegeria.commands.tech.get_element_info:main"
    list_elements = "pyegeria.commands.tech.list_all_om_type_elements:main"
    list_elements_x = "pyegeria.commands.tech.list_all_om_type_elements_x:main"
    list_elements_by_classification_by_prop_value = "pyegeria.commands.tech.list_elements_by_classification_by_property_value:main"
    list_elements_by_prop_value = "pyegeria.commands.tech.list_elements_by_property_value:main"
    list_elements_by_prop_value_x = "pyegeria.commands.tech.list_elements_by_property_value_x:main"
    list_related_specification = "pyegeria.commands.tech.list_related_specification:main"
    list_elements_for_classification = "pyegeria.commands.tech.list_elements_for_classification:main"
    list_all_related_elements = "pyegeria.commands.tech.list_all_related_elements:main"
    list_related_elements_with_prop_value = "pyegeria.commands.tech.list_related_elements_with_prop_value:main"

    get_tech_type_template = "pyegeria.commands.tech.get_tech_type_template:main"
    list_relationships = "pyegeria.commands.tech.list_relationships:main"

    list_valid_metadata_values = "pyegeria.commands.tech.list_valid_metadata_values:main"
    list_anchored_elements = "pyegeria.commands.tech.list_anchored_elements:main"
    list_gov_action_processes = "pyegeria.commands.tech.list_gov_action_processes:main"