[project]
name = "my-egeria"
version = "0.1.0"
description = "MyEgeria TUI application"
readme = "README.md"
authors = [{name = "Dan Wolfson"}]
requires-python = ">=3.12"
dependencies = [
    "textual>=1.0.0",
    "pyegeria",
    "pydantic>=2.12.3",
    "loguru",
    "inflect",
    "rich>=14.2",
    "pyperclip",
    "textual-serve>=1.1.3",
    "textual-web",
]

[tool.uv.sources]
pyegeria = { workspace = true }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["my_egeria", "my_egeria.*"]

[tool.setuptools.package-data]
"my_egeria" = ["**/*.tcss"]

[project.scripts]
# Terminal mode
my-egeria = "my_egeria.main:main"
# Browser mode (textual serve); env: MY_EGERIA_HOST, MY_EGERIA_PORT, MY_PROFILE_PORT
serve-my-egeria = "my_egeria.serve:serve_my_egeria"
serve-my-profile = "my_egeria.serve:serve_my_profile"

[app.my-egeria]
command = "serve_my_egeria"

[app.my-profile]
command = "python my_egeria.DemoCode.My_Profile.my_profile_app:main"